# serializer version: 1
# name: TestCollectivitesAPI.test_competences_list[competence_plan]
  list([
    dict({
      'code': '123456778',
      'departementCode': '13',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'code': '987654321',
      'departementCode': '30',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_competences_list[competence_schema]
  list([
    dict({
      'code': '123456789',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'CC',
    }),
    dict({
      'code': '987654321',
      'departementCode': '30',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_competences_list[competence_schema_ou_plan]
  list([
    dict({
      'code': '123456778',
      'departementCode': '13',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'code': '123456789',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'CC',
    }),
    dict({
      'code': '987654321',
      'departementCode': '30',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_competences_list[sans_competence]
  list([
    dict({
      'code': '123456778',
      'departementCode': '13',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'code': '123456789',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'CC',
    }),
    dict({
      'code': '987654321',
      'departementCode': '30',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[many_departments]
  list([
    dict({
      'code': '123456789',
      'departementCode': '84',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
    dict({
      'code': '987654321',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[many_types]
  list([
    dict({
      'code': '132435465',
      'departementCode': '30',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '132435465',
      'type': 'SMO',
    }),
    dict({
      'code': '987654321',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[no_filter]
  list([
    dict({
      'code': '123456789',
      'departementCode': '84',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
    dict({
      'code': '132435465',
      'departementCode': '30',
      'intitule': 'Groupement 3',
      'regionCode': '76',
      'siren': '132435465',
      'type': 'SMO',
    }),
    dict({
      'code': '987654321',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[one_department]
  list([
    dict({
      'code': '123456789',
      'departementCode': '84',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[region]
  list([
    dict({
      'code': '123456789',
      'departementCode': '84',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'SIVOM',
    }),
    dict({
      'code': '987654321',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_list_filters[region_and_type]
  list([
    dict({
      'code': '987654321',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '987654321',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_with_groupements_and_members[avec_groupements]
  list([
    dict({
      'code': '243000585',
      'departementCode': '30',
      'groupements': list([
        dict({
          'code': '253000020',
          'departementCode': '30',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intitule': "CC Beaucaire Terre d'Argence",
      'regionCode': '76',
      'siren': '243000585',
      'type': 'CC',
    }),
    dict({
      'code': '253000020',
      'departementCode': '30',
      'groupements': list([
      ]),
      'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'regionCode': '76',
      'siren': '253000020',
      'type': 'SMO',
    }),
    dict({
      'code': '30032',
      'departementCode': '30',
      'groupements': list([
        dict({
          'code': '243000585',
          'departementCode': '30',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'code': '253000020',
          'departementCode': '30',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intitule': 'Beaucaire',
      'regionCode': '76',
      'siren': '30032',
      'type': 'COM',
    }),
    dict({
      'code': '30034',
      'departementCode': '30',
      'groupements': list([
        dict({
          'code': '243000585',
          'departementCode': '30',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'code': '253000020',
          'departementCode': '30',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intitule': 'Bellegarde',
      'regionCode': '76',
      'siren': '30034',
      'type': 'COM',
    }),
    dict({
      'code': '30117',
      'departementCode': '30',
      'groupements': list([
        dict({
          'code': '243000585',
          'departementCode': '30',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'code': '253000020',
          'departementCode': '30',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intitule': 'Fourques',
      'regionCode': '76',
      'siren': '30117',
      'type': 'COM',
    }),
    dict({
      'code': '30135',
      'departementCode': '30',
      'groupements': list([
        dict({
          'code': '243000585',
          'departementCode': '30',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'code': '253000020',
          'departementCode': '30',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intitule': 'Jonquières-Saint-Vincent',
      'regionCode': '76',
      'siren': '30135',
      'type': 'COM',
    }),
    dict({
      'code': '30336',
      'departementCode': '30',
      'groupements': list([
        dict({
          'code': '243000585',
          'departementCode': '30',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'code': '253000020',
          'departementCode': '30',
          'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
          'regionCode': '76',
          'siren': '253000020',
          'type': 'SMO',
        }),
      ]),
      'intitule': 'Vallabrègues',
      'regionCode': '76',
      'siren': '30336',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_with_groupements_and_members[avec_membres]
  list([
    dict({
      'code': '243000585',
      'departementCode': '30',
      'intitule': "CC Beaucaire Terre d'Argence",
      'membres': list([
        dict({
          'code': '30032',
          'departementCode': '30',
          'intitule': 'Beaucaire',
          'regionCode': '76',
          'siren': '30032',
          'type': 'COM',
        }),
        dict({
          'code': '30034',
          'departementCode': '30',
          'intitule': 'Bellegarde',
          'regionCode': '76',
          'siren': '30034',
          'type': 'COM',
        }),
        dict({
          'code': '30117',
          'departementCode': '30',
          'intitule': 'Fourques',
          'regionCode': '76',
          'siren': '30117',
          'type': 'COM',
        }),
        dict({
          'code': '30135',
          'departementCode': '30',
          'intitule': 'Jonquières-Saint-Vincent',
          'regionCode': '76',
          'siren': '30135',
          'type': 'COM',
        }),
        dict({
          'code': '30336',
          'departementCode': '30',
          'intitule': 'Vallabrègues',
          'regionCode': '76',
          'siren': '30336',
          'type': 'COM',
        }),
      ]),
      'regionCode': '76',
      'siren': '243000585',
      'type': 'CC',
    }),
    dict({
      'code': '253000020',
      'departementCode': '30',
      'intitule': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'membres': list([
        dict({
          'code': '243000585',
          'departementCode': '30',
          'intitule': "CC Beaucaire Terre d'Argence",
          'regionCode': '76',
          'siren': '243000585',
          'type': 'CC',
        }),
        dict({
          'code': '30032',
          'departementCode': '30',
          'intitule': 'Beaucaire',
          'regionCode': '76',
          'siren': '30032',
          'type': 'COM',
        }),
        dict({
          'code': '30034',
          'departementCode': '30',
          'intitule': 'Bellegarde',
          'regionCode': '76',
          'siren': '30034',
          'type': 'COM',
        }),
        dict({
          'code': '30117',
          'departementCode': '30',
          'intitule': 'Fourques',
          'regionCode': '76',
          'siren': '30117',
          'type': 'COM',
        }),
        dict({
          'code': '30135',
          'departementCode': '30',
          'intitule': 'Jonquières-Saint-Vincent',
          'regionCode': '76',
          'siren': '30135',
          'type': 'COM',
        }),
        dict({
          'code': '30336',
          'departementCode': '30',
          'intitule': 'Vallabrègues',
          'regionCode': '76',
          'siren': '30336',
          'type': 'COM',
        }),
      ]),
      'regionCode': '76',
      'siren': '253000020',
      'type': 'SMO',
    }),
    dict({
      'code': '30032',
      'departementCode': '30',
      'intitule': 'Beaucaire',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '30032',
      'type': 'COM',
    }),
    dict({
      'code': '30034',
      'departementCode': '30',
      'intitule': 'Bellegarde',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '30034',
      'type': 'COM',
    }),
    dict({
      'code': '30117',
      'departementCode': '30',
      'intitule': 'Fourques',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '30117',
      'type': 'COM',
    }),
    dict({
      'code': '30135',
      'departementCode': '30',
      'intitule': 'Jonquières-Saint-Vincent',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '30135',
      'type': 'COM',
    }),
    dict({
      'code': '30336',
      'departementCode': '30',
      'intitule': 'Vallabrègues',
      'membres': list([
      ]),
      'regionCode': '76',
      'siren': '30336',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_without_communes_from_list[default_value]
  list([
    dict({
      'code': '123456778',
      'departementCode': '13',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'code': '123456789',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_without_communes_from_list[with_communes]
  list([
    dict({
      'code': '123456778',
      'departementCode': '13',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
    dict({
      'code': '123456789',
      'departementCode': '13',
      'intitule': 'Groupement 1',
      'regionCode': '93',
      'siren': '123456789',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCollectivitesAPI.test_without_communes_from_list[without_communes]
  list([
    dict({
      'code': '123456778',
      'departementCode': '13',
      'intitule': 'Groupement 2',
      'regionCode': '93',
      'siren': '123456778',
      'type': 'CC',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[many_departments]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '30000',
      'departementCode': '30',
      'intitule': 'Commune 2',
      'regionCode': '76',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[no_filter]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '30000',
      'departementCode': '30',
      'intitule': 'Commune 2',
      'regionCode': '76',
      'type': 'COM',
    }),
    dict({
      'code': '84000',
      'departementCode': '84',
      'intitule': 'Commune 3',
      'regionCode': '93',
      'type': 'COMD',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[one_department]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[region]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '84000',
      'departementCode': '84',
      'intitule': 'Commune 3',
      'regionCode': '93',
      'type': 'COMD',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[region_and_type]
  list([
    dict({
      'code': '84000',
      'departementCode': '84',
      'intitule': 'Commune 3',
      'regionCode': '93',
      'type': 'COMD',
    }),
  ])
# ---
# name: TestCommunesAPI.test_list[type_commune]
  list([
    dict({
      'code': '13150',
      'departementCode': '13',
      'intitule': 'Commune 1',
      'regionCode': '93',
      'type': 'COM',
    }),
    dict({
      'code': '30000',
      'departementCode': '30',
      'intitule': 'Commune 2',
      'regionCode': '76',
      'type': 'COM',
    }),
  ])
# ---
